fix: Form help alignment. (#115)
fix: Form help alignment

--- a/manon/form-help.scss
+++ b/manon/form-help.scss
@@ -9,6 +9,7 @@ form.help {
 
   div {
     position: relative;
+    padding: 0;
   }
 
   > div,
@@ -64,5 +65,6 @@ form.help {
   fieldset {
     max-width: 100%;
     min-width: 0;
+    gap: 0;
   }
 }
